k8s/apps/hello-app/overlays/test/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-deployment
spec:
  replicas: 1
