k8s/apps/hello-app/overlays/test/istio-vs-patch.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hello-app-vs
spec:
  hosts:
    - test.hello.local
  gateways:
    - hello-app-gateway-test
  http:
    - route:
        - destination:
            host: hello-app-svc-test
            port:
              number: 80
